@@ -174,6 +174,12 @@ Bug Fixes
 * SOLR-7588: Fix javascript bug introduced by SOLR-7409 that breaks the
   dataimport screen in the admin UI. (Bill Bell via Shawn Heisey)
 
+Other Changes
+----------------------
+
+* SOLR-7648: Expose remote IP and Host via the AuthorizationContext to be used by the authorization plugin.
+  (Ishan Chattopadhyaya via Anshum Gupta)
+
 ==================  5.2.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
